# TMSWarp

./: .gitignore  CLAUDE.md  LICENSE  README.md  ernie_timing_cache.json  pixi.toml  pyproject.toml  requirements.txt  sphere3_data.npz  visualize_convergence.py
.github/workflows/: publish.yml  test.yml
benchmarks/: compare_results.py  ernie_comparison.py  ernie_timing.py  ernie_validation.py  gpu_scaling.py  run_benchmarks.py  sphere3_validation.py
benchmarks/results/: hive_x86_64_cpu_20260302_182425.json  slate_arm64_cpu_20260302_164440.json  slate_arm64_cpu_20260303_113217.json
scripts/: extract_sphere3.py  fetch_ernie.py  run_simnibs_efield.py
src/tmswarp/: __init__.py  analytical.py  coil.py  conductor.py  fields.py  solver.py  solver_warp.py
tests/: test_analytical.py  test_coil.py  test_install.py  test_solver.py  test_solver_warp.py  test_sphere3_validation.py
