[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmswarp"
version = "0.1.0"
description = "TMS simulation utilities using Nvidia Warp"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "SlicerTMS Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
gpu = [
    "warp-lang",
]
test = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/SlicerTMS/TMSWarp"
Repository = "https://github.com/SlicerTMS/TMSWarp"
Issues = "https://github.com/SlicerTMS/TMSWarp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tmswarp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
